<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:src="@drawable/img_number_verification"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_your_number"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:textColor="@color/grey_80"
            android:textStyle="bold" />

        <TextView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/please_enter_your_mobile_number_to_receive_a_verification_code_carrier_rates_may_apply"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey_60" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="35dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:text="+254"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@color/grey_80" />

            <View
                android:layout_width="5dp"
                android:layout_height="0dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/_7_000_000_000"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/grey_90"
                android:textStyle="bold" >

                <requestFocus/>

            </com.google.android.material.textfield.TextInputEditText>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded_red"
            android:text="@string/continue_to_code"
            android:textColor="@android:color/white" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_other_time"
            android:textColor="@color/grey_40" />

    </LinearLayout>

</RelativeLayout>