<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/image_26"
        android:contentDescription="@string/todo" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/overlay_dark_90" />

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="15dp">

        <View
            android:layout_width="0dp"
            android:layout_height="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/app_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display2"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/sign_in"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <View
            android:layout_width="50dp"
            android:layout_height="3dp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/verify_your_number"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/please_enter_your_mobile_number_to_receive_a_verification_code_carrier_rates_may_apply"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textColor="@android:color/white" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="35dp"
            android:orientation="horizontal">
            <com.tfcporciuncula.phonemoji.PhonemojiTextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                >

                <com.tfcporciuncula.phonemoji.PhonemojiTextInputEditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true"
                    />

            </com.tfcporciuncula.phonemoji.PhonemojiTextInputLayout>

            <requestFocus />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="25dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">



            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:textStyle="bold"
                android:tint="@color/cyan_800"
                app:backgroundTint="@android:color/white"
                app:fabSize="normal"
                app:rippleColor="@color/cyan_800"
                app:srcCompat="@drawable/ic_arrow_right"
                tools:ignore="VectorDrawableCompat"
                android:focusable="true"
                android:contentDescription="@string/next" />


            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:theme="@style/ProgressBar.White"
                android:visibility="gone" />

        </RelativeLayout>

        <TextView
            android:id="@+id/processOtp"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="center_horizontal" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/sign_up_for_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_for_an_account"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/grey_10" />


        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="5dp" />

    </LinearLayout>

</RelativeLayout>