<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/p4" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/overlay_dark_70" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentInsetStartWithNavigation="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <View
                    android:layout_width="0dp"
                    android:layout_height="15dp" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/logo_small"
                    app:tint="@android:color/white" />

                <TextView
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/welcome_to_materialx"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:textColor="@color/grey_10"
                    android:gravity="center_horizontal" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/enter_code"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_20"
                    android:gravity="center_horizontal" />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="numberPassword"
                    android:maxLength="8"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:theme="@style/EditText.White" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="10dp" />

                <TextView
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="We sent the confirmation code to your mobile. please check your inbox."
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_20"
                    android:gravity="center_horizontal" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="15dp" />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="RESEND"
                    android:textColor="@android:color/white" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_rounded_primary"
                    android:text="CONTINUE"
                    android:id="@+id/continues"
                    android:textColor="@android:color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_an_account"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/grey_20" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_in"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/grey_20"
                        android:textStyle="bold" />

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="35dp" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>